# music-assistant-mcp

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
integration_tests/: __init__.py  conftest.py  test_music.py  test_playback.py  test_players.py  test_queue.py
src/music_assistant_mcp/: __init__.py  client.py  server.py
src/music_assistant_mcp/tools/: __init__.py  music.py  playback.py  players.py  queue.py
tests/: test_tools.py
