[project]
name = "music-assistant-mcp"
version = "0.1.0"
description = "MCP server for controlling Music Assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "music-assistant-client>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
music-assistant-mcp = "music_assistant_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_assistant_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
